[package]
name = "charge-keyboard-backlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.32"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "fileapi", "minwinbase", "ioapiset"] }